--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@
 /public/storage
 /storage/*.key
 /vendor
-.env
-.env.backup
+.env.example
 .phpunit.result.cache
 docker-compose.override.yml
 Homestead.json
